cmake_minimum_required(VERSION 3.22)
add_subdirectory("${PROJECT_SOURCE_DIR}/submodule/googletest" "submodule/googletest")
add_executable(ipv4Tests ipv4_tests.cpp)
add_executable(socketRawTests socket_raw_tests.cpp)
target_link_libraries(ipv4Tests PRIVATE GTest::gtest_main networklib::networklib)
target_link_libraries(socketRawTests PRIVATE GTest::gtest_main networklib::networklib)
include(GoogleTest)
gtest_discover_tests(ipv4Tests)
gtest_discover_tests(socketRawTests)